--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body {
 	position: absolute;
 	left: 0;
-	width: 1500px;
+	/* width: 1500px; */
 	margin: 0 auto;
 	border-radius: 15px;
 	background-color: rgba(fe, ef, ef, 1);
@@ -12,7 +12,8 @@ body {
 	display: block;
 	position: fixed;
 	z-index: -99;
-	width: 1500px;
+	/* width: 1500px; */
+	width: 100%;
 	height: 100%;
 	opacity: 40%;
 	-webkit-filter: blur(1px);
@@ -25,12 +26,45 @@ body {
 	width: 300px;
 	cursor: pointer;
 	transition-duration: 0.3s;
+	float: left;
+	margin: 0;
+	margin-top: 30px;
+	display: inline-block;
 }
 
 #noticeButton:hover {
 	transform: scale(1.3, 1.3);
 }
 
+#version{
+	position: relative;
+	display: inline-block;
+	left: 30%;
+	font-size: 110%;
+	margin: 0;
+	margin-top: 10px;
+	float: left;
+}
+
+#constantSheet{
+	opacity: 0;
+	height: 90px;
+	width: 337px;
+	background: url(../img/btn-accept-zh-Hans.png) center center no-repeat;
+	position: relative;
+	float: left;
+	margin: 0 auto;
+	margin-top: 40px;
+	display: inline-block;
+	font-size: 30px;
+	font-weight: 800;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	border: none;
+	cursor: pointer;
+	transition-duration: 0.3s;
+	left: 25%;
+}
 
 #notices {
 	position: relative;
@@ -67,7 +101,7 @@ body {
 	margin: 0 auto;
 }
 
-#controller button {
+#controller button{
 	position: relative;
 	margin: 16px;
 	width: 450px;
@@ -83,10 +117,11 @@ body {
 	transition-duration: 0.3s;
 }
 
+
 #uploadButton,
 #download,
 #sendToB30,
-#edit {
+#edit{
 	background: url(../img/btn-accept-zh-Hans.png) center center;
 }
 
@@ -105,7 +140,8 @@ body {
 #download:hover,
 #sendToB30:hover,
 #edit:hover,
-#dldbtn:hover {
+#dldbtn:hover,
+#constantSheet:hover {
 	transform: scale(1.1, 1.1);
 }
 
@@ -155,14 +191,16 @@ tbody:first-child {
 
 #chartContainer{
 	display: none;
-	width: 800px;
+	width: 900px;
+	height: 450px;
 	margin: 0 auto;
 }
 
 #chart {
-	width: 100%;
 	background-color: white;
 	margin: 0 auto;
+	height: 100%;
+	width: 100%;
 	box-sizing: border-box;
 	font-weight: 800;
 }
