调整元素生成顺序

--- a/css/divgen.css
+++ b/css/divgen.css
@@ -580,7 +580,8 @@ body {
 
 .items {
 	display: flex;
-	width: 290px;
+	justify-content: space-evenly;
+	width: 320px;
 	font-weight: bolder;
 	align-items: stretch;
 	position: relative;
