--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -480,7 +480,8 @@ body {
 
 .items {
 	display: flex;
-	width: 290px;
+	justify-content: space-evenly;
+	width: 310px;
 	font-weight: bolder;
 	align-items: stretch;
 	position: relative;
