--- a/css/divgen.css
+++ b/css/divgen.css
@@ -22,6 +22,15 @@
 	
 }
 
+@keyframes buttonBgMove{
+	from{
+		background-position: 0%;
+	}
+	to{
+		background-position: 400%;
+	}
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -681,6 +690,15 @@ body {
 	column-gap: 0px;
 	transition-duration: 0.3s;
 	float: left;
+}
+
+#saveButton{
+	position: relative;
+	background-color: #4158D0;
+	background-image: linear-gradient(90deg, #4158D0 0%, #C850C0 25%, #FFCC70 50%, #00c923 75%, #4158d0 100%);
+	background-size: 400%;
+	background-position: 0%;
+	animation: buttonBgMove 6s linear infinite;
 }
 
 #controller * {
