微调样式，替换字体。删除AiChan推荐里不应存在的字段

--- a/css/completion.css
+++ b/css/completion.css
@@ -773,6 +773,7 @@ button:active {
 
 .spliter-statistics-number{
 	position: relative;
+	font-family: 'Exo';
 	float: left;
 	height: 3.5rem;
 	line-height: 3.5rem;
