更新v5.10.0 补全定数表 新增头像和贴纸和ID框 一些小调整

--- a/css/index.css
+++ b/css/index.css
@@ -113,6 +113,15 @@ body {
 	font-family: "Exo";
 }
 
+#sticker {
+	position: relative;
+	margin: 0 auto;
+	height: 20vw;
+	max-height: 150px;
+	width: 20vw;
+	max-width: 150px;
+}
+
 li {
 	list-style: none;
 }
