--- a/css/fakeResult.css
+++ b/css/fakeResult.css
@@ -87,21 +87,21 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background: url("img/res_bg.png");
+	/* background: url("img/res_bg.png"); */
 	background-size: cover;
 	background-repeat:  no-repeat;
-	z-index: -99;
+	/* z-index: -99; */
 }
 
 #reference {
     height: 100%;
     width: 100%;
     /* opacity: 0.4; */
-    z-index: 0;
+    z-index: -9999;
     position: absolute;
     top: 0;
     display: block;
-    background: url("img/layout/bg.png");
+    /* background: url("img/layout/bg.png"); */
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -112,6 +112,7 @@ body {
 	top: 0;
 	width: 100%;
 	height: 9%;
+	z-index: 5;
 }
 
 #top-bar-background {
@@ -167,7 +168,7 @@ body {
 	position: absolute;
 	font-size: 2.6rem;
 	font-weight: bold;
-	z-index: 99;
+	z-index: 999;
 	left: 80px;
 	top: 40px;
 	font-family: 'NotoSans';
@@ -275,7 +276,7 @@ body {
 	width: 100%;
 	opacity: 1;
 	/* display: none; */
-	z-index: -1;
+	z-index: 0;
 }
 
 
@@ -392,7 +393,7 @@ body {
 	left: 8px;
 	line-height: 8rem;
 	letter-spacing: 2.4px;
-	z-index: -1;
+	z-index: 1;
 }
 
 #artist {
@@ -408,7 +409,7 @@ body {
 	left: 0;
 	line-height: 8rem;
 	/* letter-spacing: 0px; */
-	z-index: -1;
+	z-index: 1;
 }
 
 #clear-type {
@@ -428,6 +429,7 @@ body {
 	box-sizing: border-box;
 	width: 800px;
 	height: 200px;
+	z-index: 2;
 }
 
 #maxrecall-background {
@@ -569,7 +571,7 @@ body {
 	top: 769px;
 	left: 1001px;
 	/* opacity: 50%; */
-	mix-blend-mode: color-burn;
+	/* mix-blend-mode: color-burn; */
 }
 
 #hp-bar-grid {
@@ -586,7 +588,7 @@ body {
 	width: 77px;
 	left: 1016px;
 	top: 770px;
-	mix-blend-mode: soft-light;
+	/* mix-blend-mode: soft-light; */
 }
 
 #hp-value {
@@ -607,6 +609,7 @@ body {
 #score-panel {
 	position: absolute;
 	background-color: white;
+	z-index: 4;
 }
 
 #score-panel-background {
@@ -713,6 +716,11 @@ body {
 	position: relative;
 	height: 72px;
 
+}
+
+#item-panel{
+	position: absolute;
+	z-index: 4;
 }
 
 #item-panel span {
@@ -838,7 +846,7 @@ body {
 	left: 1330px;
 	top: 30px;
 	height: 3000px;
-	z-index: -1;
+	z-index: 3;
 	animation: floating-character infinite alternate ease-in-out 3s;
 }
 
@@ -847,6 +855,7 @@ body {
 	bottom: 0;
 	width: 3200px;
 	height: 165px;
+	z-index: 5;
 }
 
 #bottombar div {
