--- a/css/fakeResult.css
+++ b/css/fakeResult.css
@@ -1,11 +1,23 @@
 @font-face {
 	font-family: "NotoSans";
 	src: url('../Fonts/NotoSansCJKsc-Bold.otf');
+	unicode-range: U+0020-007E; /* ASCII range */
 }
 
 @font-face {
 	font-family: "NotoSansRegular";
 	src: url('../Fonts/NotoSansCJKsc-Regular.otf');
+	unicode-range: U+0020-007E; /* ASCII range */
+}
+
+@font-face {
+	font-family: "Nanum";
+	src: url('../Fonts/NanumBarunGothic-Bold.otf');
+}
+
+@font-face {
+	font-family: "NanumRegular";
+	src: url('../Fonts/NanumBarunGothic-regular.otf');
 }
 
 @font-face {
@@ -13,6 +25,20 @@
 	src: url('../Fonts/Exo-SemiBold.ttf');
 }
 
+@font-face {
+	font-family: "ExoLight";
+	src: url('../Fonts/Exo-Regular.ttf');
+}
+
+@font-face {
+	font-family: "L2";
+	src: url('../Fonts/L2-SemiBold.ttf');
+}
+
+@font-face {
+	font-family: "L2Regular";
+	src: url('../Fonts/L2-Regular.ttf');
+}
 @font-face {
 	font-family: "GeosansLight";
 	src: url('../Fonts/GeosansLight.ttf');
@@ -384,7 +410,7 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 8rem;
-	font-family: "NotoSansRegular";
+	font-family: "NotoSansRegular", "L2Regular", sans-serif;
 	color: white;
 	text-shadow: 0px 0px 2px white, 6px 6px 3px black;
 	text-align: center;
@@ -447,28 +473,18 @@ body {
 }
 
 #constant {
-	position: absolute;
-	left: 88px;
-	top: 43px;
-	font-size: 5.4rem;
-	font-family: "Exo";
-	font-weight: 500;
-	/* display: none; */
-	color: white;
-	z-index: 2;
-	text-shadow: 0 0 3.5px #5a437c,
-		0 3.5px 2px #5a437c,
-		2px 2px 2px #5a437c,
-		3.5px 0 2px #5a437c,
-		2px -2px 2px #5a437c,
-		0 -3.5px 2px #5a437c,
-		-2px -2px 2px #5a437c,
-		-3.5px 0 2px #5a437c,
-		-2px 2px 2px #5a437c,
-		3px 3px #5a437c,
-		-3px 3px #5a437c,
-		3px -3px #5a437c,
-		-3px -3px #5a437c;
+    position: absolute;
+    left: 88px;
+    top: 43px;
+    font-size: 5.4rem;
+    font-family: "ExoLight";
+    font-weight: 300;
+    /* display: none; */
+    color: white;
+    z-index: 2;
+    text-shadow: 0 0 3.5px #5a437c, 0 3.5px 2px #5a437c, 2px 2px 2px #5a437c, 3.5px 0 2px #5a437c, 2px -2px 2px #5a437c, 0 -3.5px 2px #5a437c, -2px -2px 2px #5a437c, -3.5px 0 2px #5a437c, -2px 2px 2px #5a437c, 3px 3px #5a437c, -3px 3px #5a437c, 3px -3px #5a437c, -3px -3px #5a437c;
+    width: 88px;
+    text-align: center;
 }
 
 #plus-mark {
@@ -540,7 +556,7 @@ body {
 
 #maxrecall {
     left: 577px;
-    top: 99px;
+    top: 100px;
     font-size: 3rem;
     font-family: "NotoSansRegular";
     letter-spacing: 1.5px;
@@ -758,7 +774,7 @@ body {
 	float: none;
 	position: absolute;
 	left: 454px;
-	top: 1px;
+	top: 3px;
 	text-wrap: nowrap;
 	font-size: 3rem;
 	text-align: left;
