--- a/css/fakeResult.css
+++ b/css/fakeResult.css
@@ -1035,6 +1035,7 @@ body {
 	height: 100%;
 	left: 25%;
 	background-color: rgba(255, 255, 255, 0.8);
+	-webkit-backdrop-filter: blur(5px); /* Safari 9+, iOS 9+ */
 	backdrop-filter: blur(5px);
 	overflow-y: scroll;
 }
@@ -1152,6 +1153,7 @@ body {
     font-weight: 800;
     margin: 5px 0 5px 0;
     box-sizing: border-box;
+	-webkit-backdrop-filter: blur(10px); /* Safari 9+, iOS 9+ */
     backdrop-filter: blur(10px);
 	cursor: pointer;
 }
